# kinect_ar

./: CMakeLists.txt  README.md
include/: imageStream.h
src/: imageStream.cpp  main.cpp
